--- a/welive/receipt_portal/templates/main/base.html
+++ b/welive/receipt_portal/templates/main/base.html
@@ -13,7 +13,7 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
             <div clas="container-fluid">
                 <div>
                     <ul class="navbar-nav">
@@ -34,9 +34,11 @@
             </div>
         </nav>
 
-        <div class="container-fluid">
-            {% block content%} Default Content {% endblock%}
-        </div>
+        {% block contenttag %}
+            <div class="container-fluid">
+                {% block content%} Default Content {% endblock%}
+            </div>
+        {% endblock %}
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
