--- a/welive/receipt_portal/templates/main/home.html
+++ b/welive/receipt_portal/templates/main/home.html
@@ -1,3 +1,18 @@
 {% extends 'main/base.html' %}
+{% load crispy_forms_tags%}
 {% block title%}Home Page{% endblock %}
-{% block content%} <h1> Testing the Base Template</h1>{% endblock %}
+{% block contenttag %}
+    <div class="container-lg">
+        {% block content%} <h1>Home Page</h1> {% endblock%}
+    </div>
+    <div class="mt-10 container-sm">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token%} {{ form | crispy }}
+            <input type="file" name="myfile">
+            <button type="submit">Upload</button>
+        </form>
+    {% if uploaded_file_url %}
+    <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
+    {% endif %}
+    </div>
+{% endblock %}
