--- a/welive/receipt_portal/templates/registration/login.html
+++ b/welive/receipt_portal/templates/registration/login.html
@@ -1,9 +1,14 @@
 {% extends 'main/base.html'%}
 {% block title%} Title {% endblock %}
 {% load crispy_forms_tags%}
-{% block content %} 
-    <form method="post">
-    {% csrf_token%} {{ form | crispy }}
-        <button type="submit" class="btn btn-success">Login</button>
-    </form>
+
+{% block contenttag %}
+    <div class="mt-10 container-sm">
+        {% block content %}
+            <form method="post">
+            {% csrf_token%} {{ form | crispy }}
+                <button type="submit" class="btn btn-success">Login</button>
+            </form>
+        {% endblock %}
+    </div>
 {% endblock %}
