feat: emailing + receipt and refactor: upload logic

--- a/welive/receipt_portal/templates/main/home.html
+++ b/welive/receipt_portal/templates/main/home.html
@@ -9,22 +9,28 @@
         <h2>File Upload</h2>
     </div>
     <div class="mt-10 container-sm">
-        <form method="post" enctype="multipart/form-data">
+        <form method="post" action="upload_file/" enctype="multipart/form-data">
             {% csrf_token%} {{ form | crispy }}
             <input type="file" name="myfile">
             <button type="submit">Upload</button>
         </form>
     </div>
-    <div class="container-lg">
-        <h2>Receipt Generator</h2>
-        <div class="form-floating">
-            <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
-            <option selected>Choose File</option>
-            {% for file in test %}
-                <option>{{file}}</option>
-            {% endfor %}
-            </select>
-            <label for="floatingSelect">Donations:</label>
-          </div>
+    <div class="mt-10 container-sm">
+        <h2>Generate Receipt</h2>
+        <form method="post" action="receipt/" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <div class="form-floating">
+                <select class="form-select" id="floatingSelect" name="selected_file" aria-label="Floating label select example">
+                    <option selected>Choose File</option>
+                    {% for file in uploaded_files %}
+                        <option>{{ file }}</option>
+                    {% endfor %}
+                </select>
+                <label for="floatingSelect">Donations:</label>
+            </div>
+            <button type="submit" class="btn btn-success">Submit</button>
+        </form>
     </div>
+
 {% endblock %}
