--- a/welive/receipt_portal/templates/main/base.html
+++ b/welive/receipt_portal/templates/main/base.html
@@ -12,26 +12,31 @@
         crossorigin="anonymous">
     </head>
     <body>
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
-            <div clas="container-fluid">
-                <div>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/admin">Admin</a>
-                        </li>
-                        <li class="nav-item">
-                            <form method="post" action="{% url 'logout' %}">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-dark">logout</button>
-                            </form>
-                        </li>                            
-                    </ul>
-                </div>
+            <div class="container-fluid ">
+              <a class="navbar-brand " href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav ">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/admin">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <form method="post" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-dark">Logout</button>
+                    </form>
+                </li>    
+                </ul>		  
+              </div>
             </div>
-        </nav>
+          </nav>
 
         {% block contenttag %}
             <div class="container-fluid">
